--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,6 @@
   <artifactId>studentReg2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <url>https://github.com/#PeadarC/Repository2/studentReg2/0.1</url>
+  <url>https://github.com/#PeadarC/Repository2/0.1</url>
   
 </project>
